# elfvis

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: deploy.yml  test.yml
docs/plans/: 2026-03-04-click-to-clipboard-design.md  2026-03-04-click-to-clipboard-plan.md  2026-03-04-rodata-attribution-design.md
src/: color.rs  diff.rs  layout.rs  lib.rs  parse.rs  render.rs  tree.rs
tests/: integration.rs
tests/fixtures/: arm.elf  build.sh
tests/fixtures/src/arm/: main.c  util.c
www/: index.html
