[package]
name = "elfvis"
version = "0.1.0"
edition = "2021"
description = "In-browser ELF binary size treemap visualizer"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
gimli = { version = "0.32", default-features = false, features = ["read"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "DragEvent",
  "DataTransfer",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "MouseEvent",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
